Colaboratory를 통해 생성됨

--- a/배열구조_이해하기.ipynb
+++ b/배열구조_이해하기.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1x6WFvKQEhZHrxWXDSi2A54HN3DFfqdCm",
-      "authorship_tag": "ABX9TyMi6EU5I068S1PLU1DK7G1p",
+      "authorship_tag": "ABX9TyPNw2ON1wkcwKz65HQ3N/qP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -71,7 +71,7 @@
         "id": "C5_c6zXjv3Ol",
         "outputId": "c1b5ceb4-b073-4da7-cd46-f82949ddfa7b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
       "metadata": {
         "id": "U5Kvnq8XwOqG"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
         "id": "nJixBhVNwYdj",
         "outputId": "f9bd6636-a18f-4fa0-b71b-cbe1d87fec4d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -146,7 +146,7 @@
         "id": "XAHedoa0waXJ",
         "outputId": "ba34d2fa-0b7c-4879-806c-c8dba55575e5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -172,7 +172,7 @@
         "id": "1pOI0B5jwdmW",
         "outputId": "9b2f31d4-a8ed-4081-a43b-2918ce2bccd4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -201,7 +201,7 @@
         "id": "0IsSq9DgwfnZ",
         "outputId": "bcd59065-3261-41c0-88ea-92b03626a87b"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +225,7 @@
       "metadata": {
         "id": "uMHSgUejwv1B"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -240,7 +240,7 @@
         "id": "ozPDDjH5w2xe",
         "outputId": "e33f138b-964d-4217-8c70-9b006d9b4da2"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,7 +265,7 @@
         "id": "vGyxLgi7w67P",
         "outputId": "9442b571-ddbd-4138-d244-e2b7a86deea8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -294,7 +294,7 @@
         "id": "H4WV5GABxSWN",
         "outputId": "102e8f85-d557-496a-c9a1-23c934135297"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -341,7 +341,7 @@
       "metadata": {
         "id": "QD4_usHmy1XB"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -357,7 +357,7 @@
         "id": "__-OjpHHy9lU",
         "outputId": "4e37755d-8a84-4e93-986e-fb523cea4e46"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +383,7 @@
         "id": "87mjXTahzBbf",
         "outputId": "61c2292d-7f16-4f74-d7be-3bea5ae84e27"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -418,7 +418,7 @@
         "id": "5HruBwbpzM5G",
         "outputId": "fe1c26ea-1a47-40b8-cbc9-87a515f4553c"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -445,7 +445,7 @@
         "id": "SAPypdTyzQXg",
         "outputId": "6bd41950-b422-4f94-b889-e6b35207d2d8"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,7 +471,7 @@
         "id": "H1fis80WzSm2",
         "outputId": "431983d2-7be4-461a-ff4f-a34ecc737a5c"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -498,7 +498,7 @@
         "id": "XQl0tKhKzdEm",
         "outputId": "7886e652-09d5-4e49-9bd9-6c7efe925ec4"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -525,7 +525,7 @@
         "id": "4DzjlBDKzlOJ",
         "outputId": "53447532-05a7-48c3-a194-6d508ec03470"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -551,7 +551,7 @@
         "id": "QfRCkpCPztrN",
         "outputId": "1076bcc8-5423-4139-f881-0a4af7156947"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -579,7 +579,7 @@
         "id": "UDgJzd9vz9C6",
         "outputId": "f14dc928-c953-4575-9b70-cc086a84773f"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -607,7 +607,7 @@
         "id": "C7740anQ0STQ",
         "outputId": "07dd6856-1d10-404d-c354-49fb6feda9cc"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -633,7 +633,7 @@
         "id": "88-OjfLV0X4y",
         "outputId": "c6e6485a-7909-492f-950e-16eb2997db09"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -671,7 +671,7 @@
         "id": "BXaJ4Rh80gzz",
         "outputId": "07c2c5c7-a69b-43f7-ad3a-82a4b51d0988"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -697,7 +697,7 @@
         "id": "rtxvxVWZ0uTc",
         "outputId": "64a938d8-c192-467a-8d18-bfcb16928d84"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -733,7 +733,7 @@
         "id": "qB7mFlsG09rh",
         "outputId": "f9ae5503-74d9-4b00-bd9c-befac40a9d44"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -768,7 +768,7 @@
         "id": "buziHQTf1Gsr",
         "outputId": "22fe7614-cebf-447f-bb5b-a8e493fd4834"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -795,7 +795,7 @@
         "id": "WllXLJi-1dRc",
         "outputId": "56575b33-0694-492d-85e8-bc6bec9594a4"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -822,7 +822,7 @@
         "id": "SrFReR0Q1iU_",
         "outputId": "6bba8ccb-094c-4976-8386-dc640d2660fb"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -848,7 +848,7 @@
         "id": "ilwhstgO1lEF",
         "outputId": "74dd526b-90c7-4d71-81ff-a2ac508f4818"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -874,7 +874,7 @@
         "id": "cmXyf2Qx2qt7",
         "outputId": "4217c438-35a8-44cc-c0fc-1a6a61d16d96"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -900,7 +900,7 @@
         "id": "FOVVwNWX21h2",
         "outputId": "9b29cd97-d1e3-4e90-f42c-0b9f7657f274"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -937,7 +937,7 @@
         "id": "c3hbnMbf3fMW",
         "outputId": "1d76159b-63d7-4df6-a819-5cef5904587d"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -964,7 +964,7 @@
         "id": "tN2BLBlx4L4C",
         "outputId": "9aee0d26-711c-4ae8-d17c-80240483b937"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -991,7 +991,7 @@
         "id": "wD4OXk_Q4Uu8",
         "outputId": "f69122c4-e313-44c9-c6cb-610572ae62cd"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1026,7 +1026,7 @@
         "id": "Y2FRHohz4q6l",
         "outputId": "7a2fcbb4-1e82-43fc-9e25-9b02b769fa09"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1052,7 +1052,7 @@
         "id": "R0cv1sGH4s9u",
         "outputId": "32df1f3a-fa6b-46b3-8742-062390815fcf"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1078,7 +1078,7 @@
         "id": "2PP1Uz9l4vEW",
         "outputId": "cd58cd24-8eca-4a6b-a19a-2096d8ca0e4f"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1103,7 +1103,7 @@
         "id": "EPAYxQHo43MI",
         "outputId": "7121fcec-a601-4b08-da55-27245847e4d1"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1129,7 +1129,7 @@
         "id": "EN1kF1IC48yd",
         "outputId": "d9bc21f6-e15a-4d7c-93b3-63ce0ec06894"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1160,7 +1160,7 @@
         "id": "7Mdl6sFP5Cxs",
         "outputId": "7c39c248-08ef-4600-cc5d-2f307a931da9"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1183,7 +1183,7 @@
         "id": "oFwFqxh65cgc",
         "outputId": "b1ec30b9-afc1-4425-f3f2-6b59562b6f5f"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1210,7 +1210,7 @@
         "id": "aUaFutf-AXuU",
         "outputId": "576944d3-a497-4f2b-db19-705a5b9a0aad"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1236,7 +1236,7 @@
         "id": "-lfk1aS_Aiw3",
         "outputId": "7eb736e2-a41d-41ef-dcee-85d3139385a8"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1262,7 +1262,7 @@
         "id": "-oYTN5beAmGI",
         "outputId": "f2fc8b5f-9948-4b18-e247-705858c1d6e0"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1288,7 +1288,7 @@
         "id": "J1yTF5FAAsZ8",
         "outputId": "e4459167-9deb-4d16-a532-04028a4b914f"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1316,7 +1316,7 @@
         "id": "IAEeEowhA0tb",
         "outputId": "61335ae7-1603-4672-8242-d5e67a1f3928"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1342,7 +1342,7 @@
         "id": "E3CU2PESA8gJ",
         "outputId": "bd6601d0-f505-4428-c217-ed2961d1c462"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1368,6 +1368,7 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
         "na = np.array([[[1,2,3,],[4,5,6]],[[1,2,3,],[4,5,6]]])\n",
         "na"
       ],
@@ -1376,9 +1377,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c-NUI_EtBlRF",
-        "outputId": "82c5931e-38b8-488f-91f2-f8697f27281f"
+        "outputId": "697812f8-0446-4d70-ac31-fe56ca5e0ef3"
       },
-      "execution_count": 61,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1392,7 +1393,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 2
         }
       ]
     },
@@ -1406,9 +1407,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eQcgBivDBw_2",
-        "outputId": "10a69c95-f7c9-4756-d61f-44a1049164cc"
+        "outputId": "06195fd8-6a06-4be2-8a1f-b1b906b04d7e"
       },
-      "execution_count": 62,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1418,7 +1419,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 3
         }
       ]
     },
@@ -1432,9 +1433,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FCDg1fuWByOH",
-        "outputId": "e954ae0e-d78d-4084-fc39-9b9f0466e668"
+        "outputId": "34fb0fae-a7ec-48f7-9850-250f3f5c8ca5"
       },
-      "execution_count": 63,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1444,7 +1445,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 63
+          "execution_count": 4
         }
       ]
     },
@@ -1458,9 +1459,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ud_T0OyBCKVz",
-        "outputId": "2ee805c6-3fb5-4064-a3d0-661cffc694ed"
+        "outputId": "096c49fe-fe6a-429b-d032-a43b5cb95abb"
       },
-      "execution_count": 64,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1471,7 +1472,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 64
+          "execution_count": 5
         }
       ]
     },
@@ -1485,9 +1486,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fTFVnsojCL_w",
-        "outputId": "1337235b-7e79-4da8-e50a-1a3284fad281"
+        "outputId": "c1688ed3-df08-4a75-a854-31c9ef09f38c"
       },
-      "execution_count": 65,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1497,7 +1498,92 @@
             ]
           },
           "metadata": {},
-          "execution_count": 65
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 스페셜 속성 : __array_interface__\n",
+        "na.__array_interface__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XvHZHgn1B6HM",
+        "outputId": "c2ebc954-593e-49e6-c081-042ee38a1557"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'data': (140138407972032, False),\n",
+              " 'strides': None,\n",
+              " 'descr': [('', '<i8')],\n",
+              " 'typestr': '<i8',\n",
+              " 'shape': (2, 2, 3),\n",
+              " 'version': 3}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "na.strides"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-tJWMnJICIXf",
+        "outputId": "91323b07-7641-4e71-e725-ba48e9bfde48"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(48, 24, 8)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 스페셜 속성에서 내부 원소 검색은 대괄호에 키를 문자열로 전달\n",
+        "na.__array_interface__['data'][0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i_Y9Q5AxGER9",
+        "outputId": "295b3f5d-c5f2-446f-ede2-415073c1f43f"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "140138407972032"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     }
