Colaboratory를 통해 생성됨

--- a/배열구조_이해하기.ipynb
+++ b/배열구조_이해하기.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1x6WFvKQEhZHrxWXDSi2A54HN3DFfqdCm",
-      "authorship_tag": "ABX9TyPNw2ON1wkcwKz65HQ3N/qP",
+      "authorship_tag": "ABX9TyOdDSDTKNErkdkaFc57MqLS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1584,6 +1584,60 @@
           },
           "metadata": {},
           "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# data속성의 데이터를 확인 : tobytes()\n",
+        "len(na.data.tobytes())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4ji3XrodGcKj",
+        "outputId": "61beff65-db34-433d-aa82-12d12394b5c2"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "96"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 다차원 배열 리스트로 변환하기 : tolist()\n",
+        "na.data.tolist()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LVOlgCm5G61i",
+        "outputId": "6b9e9b24-4141-4588-832f-dd00a7898c07"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[[1, 2, 3], [4, 5, 6]], [[1, 2, 3], [4, 5, 6]]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
         }
       ]
     }
