Colaboratory를 통해 생성됨

--- a/배열구조_이해하기.ipynb
+++ b/배열구조_이해하기.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1x6WFvKQEhZHrxWXDSi2A54HN3DFfqdCm",
-      "authorship_tag": "ABX9TyOdDSDTKNErkdkaFc57MqLS",
+      "authorship_tag": "ABX9TyMpMe8xRDZ/BkKvu/o43oto",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1638,6 +1638,179 @@
           },
           "metadata": {},
           "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### data 속성 관리기준"
+      ],
+      "metadata": {
+        "id": "uQAFfZgFHIz3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1차원 배열 만들기\n",
+        "a = np.array([1,2,3,4])\n",
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_ThmI9CbHLTj",
+        "outputId": "71d0e895-e9ea-424f-fd43-6e98f4091f50"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.data"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1e7K6N1jIpX3",
+        "outputId": "da2df7ae-d60c-4999-f085-e75196ea456d"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<memory at 0x7f74539da040>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 파이썬 memoryview 클래스에 1차원 배열을 인자로 전달\n",
+        "# 메모리의 로딩하는 객체를 만들고 변수에 할당\n",
+        "mem = memoryview(a)\n",
+        "mem"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9ZfX3NnmItsP",
+        "outputId": "85dc2e53-f0f6-4bfa-bf7d-9be574346cb5"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<memory at 0x7f74539da340>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 원소조회하기\n",
+        "a.data[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eRdCj73bI9uo",
+        "outputId": "67cfe341-b7d3-4141-9072-fddd50e909e3"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 모든 정보 조회하기 : obj\n",
+        "a.data.obj"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bZ6oBxUuJCjA",
+        "outputId": "0307f9ef-2a7d-4553-f7e2-36883e63a310"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# obj속성에서 원소 조회\n",
+        "a.data.obj[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OXnRlpYSJIfi",
+        "outputId": "395f5de3-f657-4323-caa8-6ec9eeed6695"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
         }
       ]
     }
