Colaboratory를 통해 생성됨

--- a/배열구조_이해하기.ipynb
+++ b/배열구조_이해하기.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1x6WFvKQEhZHrxWXDSi2A54HN3DFfqdCm",
-      "authorship_tag": "ABX9TyMHBY9zSFT6elRN/64IQX3a",
+      "authorship_tag": "ABX9TyNFu6bgFSc6sthAShZaDoOk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1895,6 +1895,513 @@
           },
           "metadata": {},
           "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 더 큰 수를 가진 배열 만들기\n",
+        "b = np.array([999,9999,99999,999999])\n",
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FGzTGw3ZNUBj",
+        "outputId": "206ff146-613c-42e1-ea40-4aed1f7d3131"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([   999,   9999,  99999, 999999])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# data속성 내의 값을 16진수로 표기\n",
+        "# 8개의 문자를 출력(슬라이싱 통해)\n",
+        "b.data.hex()[:8]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "BijCgCGhNdy8",
+        "outputId": "aeaed336-db38-4ae8-d728-acd3b0ed3da6"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'e7030000'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hex(999)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "L1AtH7YOPh2Z",
+        "outputId": "26864e39-c3d1-46a4-8a6a-91f8c5a07fcb"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0x3e7'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "int('0x3e7',16)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "39mH92l8QbOj",
+        "outputId": "fc9deecd-4504-485b-a985-05ddaecffad5"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "999"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 16진수로 표시할 때 \n",
+        "# 몫과 나머지를 같이 구하는 divmod() 사용\n",
+        "divmod(999,16)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p--PKKyCRjPk",
+        "outputId": "c9d2dd46-b52d-4141-c22b-4c9d8b8b87a4"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(62, 7)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "divmod(62,16)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XsQ2BqkARtx8",
+        "outputId": "f96e5a96-4c2c-468f-a100-8e1901ebcfca"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3, 14)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "divmod(3,16)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jK-Phqn_SDnq",
+        "outputId": "eddcaaf2-93d5-4582-dfe7-de0a9f2d2823"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 배열 전체의 크기 확인하기\n",
+        "a.size"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JxhuIaGFSPbl",
+        "outputId": "33066774-79a9-4062-e950-a579168c4fbd"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 반복문 활용하여 다차원 배열의 원소를 하나씩 출력하기\n",
+        "for i in range(a.size) : \n",
+        "  print(a[i])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pp_Ol4bpSSKs",
+        "outputId": "404dc174-447a-427b-e929-5b4359aa057e"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# flat속성 사용해서 편한 방법으로 순환하기\n",
+        "# flat속성 : 하나의 반복자 제공\n",
+        "a.flat"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lporADBFSben",
+        "outputId": "a940f40f-5290-454f-a438-f51a15420a54"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<numpy.flatiter at 0x21d14f0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in a.flat : \n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "816j0qOHSv9J",
+        "outputId": "8a805311-dc90-49e4-95b5-d279cbd2f5f6"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# frombuffer() : 다차원배열을 복사하지 않고 공유\n",
+        "c = np.array([1,2,3,4], dtype=np.float_)\n",
+        "c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cXSyo1oATJaa",
+        "outputId": "c48049e3-fb11-4376-fe3b-27bd2caf4230"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1., 2., 3., 4.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.frombuffer(c)\n",
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MIBvdGiiUKcZ",
+        "outputId": "9227d9ef-c1f9-43a0-cd8f-8bb80c886c3d"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1., 2., 3., 4.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 배열의 자료형 확인하기\n",
+        "# 하나의 원소는 8비트 단위로 관리\n",
+        "x.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cwFQ2fEoYh3P",
+        "outputId": "6b0694c7-b0b7-4d58-8f3e-366180fb52fa"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('float64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PaZnK_ZIY6YA",
+        "outputId": "3f642c22-158f-416b-c175-b762bc19412b"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# flags : 배열의 정보들을 관리하는 정보 확인\n",
+        "x.flags"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O0C7U_WPY9tg",
+        "outputId": "96972500-ecb3-49b1-a35b-dab172e4cce1"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "  C_CONTIGUOUS : True\n",
+              "  F_CONTIGUOUS : True\n",
+              "  OWNDATA : False\n",
+              "  WRITEABLE : True\n",
+              "  ALIGNED : True\n",
+              "  WRITEBACKIFCOPY : False\n",
+              "  UPDATEIFCOPY : False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.base is c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NHNSP_O_ampE",
+        "outputId": "531c76f3-5537-495a-ee86-29835c84a334"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 원본 배열 c\n",
+        "c.flags"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VqtH2YbIaqqN",
+        "outputId": "80cd8bed-18ee-407c-e8e1-ba930468a6a7"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "  C_CONTIGUOUS : True\n",
+              "  F_CONTIGUOUS : True\n",
+              "  OWNDATA : True\n",
+              "  WRITEABLE : True\n",
+              "  ALIGNED : True\n",
+              "  WRITEBACKIFCOPY : False\n",
+              "  UPDATEIFCOPY : False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
         }
       ]
     }
